--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Demo Adjustable Web</title>
+    <script>
+      // For keep the right visible height for iOS.
+      function setHeight() {
+        const height = document.body.offsetHeight
+        let root = document.getElementById('root')
+        root.style.height = `${height}px`
+      }
+    </script>
   </head>
-  <body>
+  <body onload="setHeight()" onresize="setHeight()">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
